--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_SWELL_STORE_URL=https://amotarget--uEFr7qLg.swell.store
-NEXT_PUBLIC_SWELL_PUBLIC_KEY=pk_ymSw0Sw8prvmsr2QjI2HezabXF6EBlxg
-SWELL_STORE_ID=amotarget
-SWELL_SECRET_KEY=sk_IlP41hWK0uOZyXOTrBFEov57g6USDz87
-SWELL_STOREFRONT_ID=uEFr7qLg
-NEXT_PUBLIC_SWELL_EDITOR=true
+NEXT_PUBLIC_SWELL_STORE_URL=
+NEXT_PUBLIC_SWELL_PUBLIC_KEY=
+SWELL_STORE_ID=
+SWELL_SECRET_KEY=
+SWELL_STOREFRONT_ID=
+NEXT_PUBLIC_SWELL_EDITOR=
